--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,10 +3,7 @@
 <head>
     <title>Healthcare Dashboard</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <style>
-        table { border-collapse: collapse; width: 100%; }
-        th, td { border: 1px solid black; padding: 8px; text-align: left; }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h1>Healthcare Dashboard</h1>
