--- a/templates/upload.html
+++ b/templates/upload.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Upload Healthcare Document</h1>
     <form id="uploadForm" enctype="multipart/form-data">
-        <input type="file" name="file" id="fileInput" accept=".txt">
+        <input type="file" name="file" id="fileInput" accept=".pdf,.txt">
         <button type="submit">Analyze</button>
     </form>
     <div id="results"></div>
